# rpg_conwayjam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: .photo_4978753491874548696_w.png-autosave.kra
assets/dialogos/Interfone/: solicitaçãoReparo.json
assets/dialogos/NPCs/: dialogoNPC1.json  dialogoNPC2.json  dialogoNPC3.json
assets/dialogos/Violeta/: Oxib.json  acesso.json  alaNRG.json  cadeTodoMundo.json  café.json  chave.json  combustivel.json  final.json  mimir.json  naoSobrouNada.json  tripulantes.json
assets/mapas/mapasNormais/: .mapa c meteoro sem portas silvertape.png-autosave.kra  .mapaMontadoSemPortas.png-autosave.kra
src/: main.cpp
src/interno/cenario/: cenario.hpp  espaco.cpp  mapa.cpp  mapa.hpp
src/interno/entidades/: entidade.cpp  entidade.hpp
src/interno/entidades/NPC/: NPC.cpp  NPC.hpp
src/interno/entidades/inimigos/: Inimigos.cpp  inimigos.hpp
src/interno/entidades/inimigos/Amalgama/: Amalgama.cpp  Amalgama.hpp
src/interno/entidades/inimigos/Smilinguido/: Smilinguido.cpp  Smilinguido.hpp
src/interno/entidades/inimigos/Tentaculo/: Tentaculo.cpp  Tentaculo.hpp
src/interno/entidades/inimigos/Tripulante/: Tripulante.cpp  Tripulante.hpp
src/interno/entidades/itens/: itens.cpp  itens.hpp
src/interno/entidades/protagonista/: protagonista.cpp  protagonista.hpp
src/interno/estados/: atos.cpp  atos.hpp  estados.cpp  estados.hpp  menu.cpp  menu.hpp  morte.cpp  morte.hpp  pause.cpp  pause.hpp
src/interno/inimigos/: Inimigos.cpp
src/interno/inimigos/Amalgama/: Amalgama.cpp  Amalgama.hpp
src/interno/inimigos/Smilinguido/: Smilinguido.cpp  Smilinguido.hpp
src/interno/inimigos/Tentaculo/: Tentaculo.cpp  Tentaculo.hpp
src/interno/inimigos/Tripulante/: Tripulante.cpp
src/interno/itens/: itens.cpp  itens.hpp
src/interno/protagonista/: protagonista.cpp  protagonista.hpp
src/interno/sistemas/: camera.cpp  camera.hpp  dialogo.hpp  globais.cpp  globais.hpp  transicao.cpp  transicao.hpp  trilhaSonora.cpp  trilhaSonora.hpp
